<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_style"
        android:icon="@drawable/ic_stars_black_24dp"
        android:title="Style" />

    <item
        android:id="@+id/navigation_book"
        android:icon="@drawable/ic_content_cut_black_24dp"
        android:title="Đặt lịch" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_store_black_24dp"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>
